sub Class.newInstance() with proper method