@@ -4993,7 +4993,7 @@ static public class ObjExpr implements Expr{
 			return null;
 		try
 			{
-			return getCompiledClass().newInstance();
+                        return getCompiledClass().getDeclaredConstructor().newInstance();
 			}
 		catch(Exception e)
 			{
